--- a/html_template/tita_admin/product-add.html
+++ b/html_template/tita_admin/product-add.html
@@ -292,7 +292,7 @@
 			<header class="ec-main-header" id="header">
 				<nav class="navbar navbar-static-top navbar-expand-lg">
 					<!-- Sidebar toggle button -->
-					<button id="sidebar-toggler" class="sidebar-toggle"></button>
+					<!-- <button id="sidebar-toggler" class="sidebar-toggle"></button> -->
 					<!-- search form -->
 					<div class="search-form d-lg-inline-block">
 						<div class="input-group">
